--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
         "nodemon": "^2.0.12"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-async-errors": "^3.1.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongodb": "^4.1.2",
+        "mongoose": "^6.0.6",
         "node-fetch": "^3.0.0",
         "youch": "^2.2.2"
     }
